--- a/packages/test-fusion/src/index.html
+++ b/packages/test-fusion/src/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.cnbj1.fds.api.mi-img.com/mih5/fusion-staging/main.js"></script>
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+      }
+      body > #app {
+        flex: 1 1 auto;
+      }
+    </style>
   </head>
   <body>
-    <div style="height: 100%;" id="app"></div>
+    <div id="app"></div>
   </body>
 </html>
